--- a/src/main/resources/static/system/login.html
+++ b/src/main/resources/static/system/login.html
@@ -17,6 +17,11 @@
 
         <div class="nav-bottom"></div>
         
+        <div class="cfa">
+            <div class="welcomeEmoji">😊</div>
+            <div class="welcomeText">아이디와 패스워드는 직원부호!</div>
+        </div>
+        
         <div class="login-process">
             <form>
                 <div class="id cfa">
