--- a/src/main/resources/static/checklist/DNSChecklist.html
+++ b/src/main/resources/static/checklist/DNSChecklist.html
@@ -6,8 +6,8 @@
     <title>Unipass 4.5</title>
     <link rel="icon" href="/unipass45.ico" type="image/x-icon">
     <link rel="stylesheet" href="/css/index.css">
-    <link rel="stylesheet" href="/css/checklist.css">
-    <script defer src="/js/checklist.js"></script>
+    <link rel="stylesheet" href="/css/DNSChecklist.css">
+    <script defer src="/js/DNSChecklist.js"></script>
 </head>
 <body>
     <div class="container"> <!-- container -->
@@ -28,27 +28,18 @@
         </div>
 
         <div id="contents">
-            <div class="checklist">
-                <div class="checklist-item-head cfa">
+            <div class="DNSChecklist">
+                <div class="DNSChecklist-item-head cfa">
                     <div class="item-fl head-numb">순번</div>
-                    <div class="item-fl head-chec-list-id">체크리스트ID</div>
-                    <div class="item-fl head-syst-name">시스템이름</div>
-                    <div class="item-fl head-fron-vari-id">화면ID</div>
-                    <div class="item-fl head-fron-vari-step">점검방법</div>
-                    <div class="item-fl head-vari-resu">점검결과</div>
+                    <div class="item-fl head-PC-user">직원성명</div>
+                    <div class="item-fl head-dns-resu">DSN IP 점검결과</div>
                 </div>
-                <div class="checklist-item" id="checklist-item-template">
+                <div class="DNSChecklist-item" id="DNSChecklist-item-template">
                     <div class="checklist-item-summary cfa">
                         <div class="item-fl numb"></div>
-                        <div class="item-fl chec-list-id"></div>
-                        <div class="item-fl syst-name"></div>
-                        <div class="item-fl fron-vari-id"></div>
-                        <div class="item-fl fron-vari-step"></div>
-                        <div class="item-fl vari-resu">
-                            <button id="noauthority">권한없음</button>
-                            <button id="resu-fail">오류발견</button>
-                            <button id="resu-pass">이상없음</button>
-                            <div class="resu-text"></div>
+                        <div class="item-fl PC-user"></div>
+                        <div class="item-fl dns-resu">
+                            <button id="dns-resu">조치완료</button>
                             <div class="crea-date"></div>
                         </div>
                     </div>
