--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -25,6 +25,7 @@
         <div class="menu cfa">
             <div class="menu-item menu-info" style="background-color: #FFE869;"><a href="/">공지사항</a></div>
             <div class="menu-item menu-checklist"><a href="/checklist">체크리스트</a></div>
+            <div class="menu-item menu-DNSChecklist"><a href="/DNSChecklist">DNS변경 체크리스트</a></div>
             <div class="menu-item menu-board"><a href="/menu3">추진단 게시판</a></div>
         </div>
 
