--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -15,18 +15,19 @@
     <div class="container"> <!-- container -->
         <div class="nav cfa">
             <div class="toy-proj-name">
-                <a href="/">전환사업 추진단</a>
+                <a href="/">체크리스트 게시판</a>
             </div>
             <a class="auth login" href="/auth/logout">로그아웃</a>
+            <div class="auth user-id"></div>
+            <div class="auth user-name"></div>
         </div>
-
         <div class="nav-bottom"></div>
         
         <div class="menu cfa">
             <div class="menu-item menu-info" style="background-color: #FFE869;"><a href="/">공지사항</a></div>
             <div class="menu-item menu-checklist"><a href="/checklist">체크리스트</a></div>
             <div class="menu-item menu-DNSChecklist"><a href="/DNSChecklist">DNS변경 체크리스트</a></div>
-            <div class="menu-item menu-board"><a href="/menu3">추진단 게시판</a></div>
+            <div class="menu-item menu-board"><a href="/menu3">워킹그룹</a></div>
         </div>
 
         <div id="contents">
