--- a/src/main/resources/static/system/login.html
+++ b/src/main/resources/static/system/login.html
@@ -18,7 +18,7 @@
     <div class="container">
         <div class="nav">
             <div class="toy-proj-name">
-                <a href="/">전환사업 추진단</a>
+                <a href="/">체크리스트 게시판</a>
             </div>
         </div>
 
