--- a/src/main/resources/static/checklist/DNSChecklist.html
+++ b/src/main/resources/static/checklist/DNSChecklist.html
@@ -13,9 +13,11 @@
     <div class="container"> <!-- container -->
         <div class="nav cfa">
             <div class="toy-proj-name">
-                <a href="/">전환사업 추진단</a>
+                <a href="/">체크리스트 게시판</a>
             </div>
             <a class="auth login" href="/auth/logout">로그아웃</a>
+            <div class="auth user-id"></div>
+            <div class="auth user-name"></div>
         </div>
 
         <div class="nav-bottom"></div>
@@ -24,7 +26,7 @@
             <div class="menu-item menu-info"><a href="/">공지사항</a></div>
             <div class="menu-item menu-checklist"><a href="/checklist">체크리스트</a></div>
             <div class="menu-item menu-DNSChecklist"><a href="/DNSChecklist">DNS변경 체크리스트</a></div>
-            <div class="menu-item menu-board"><a href="/menu3">추진단 게시판</a></div>
+            <div class="menu-item menu-board"><a href="/menu3">워킹그룹</a></div>
         </div>
 
         <div id="contents">
@@ -35,7 +37,7 @@
                     <div class="item-fl head-dns-resu">DSN IP 점검결과</div>
                 </div>
                 <div class="DNSChecklist-item" id="DNSChecklist-item-template">
-                    <div class="checklist-item-summary cfa">
+                    <div class="DNSChecklist-item-summary cfa">
                         <div class="item-fl numb"></div>
                         <div class="item-fl PC-user"></div>
                         <div class="item-fl dns-resu">
