--- a/src/main/resources/static/checklist/DNSChecklist.html
+++ b/src/main/resources/static/checklist/DNSChecklist.html
@@ -33,17 +33,18 @@
             <div class="DNSChecklist">
                 <div class="DNSChecklist-item-head cfa">
                     <div class="item-fl head-numb">순번</div>
-                    <div class="item-fl head-PC-user">직원성명</div>
-                    <div class="item-fl head-dns-resu">DSN IP 점검결과</div>
+                    <div class="item-fl head-user">직원성명</div>
+                    <div class="item-fl head-put-resu">결과등록</div>
+                    <div class="item-fl head-crea-date">등록시각</div>
                 </div>
                 <div class="DNSChecklist-item" id="DNSChecklist-item-template">
                     <div class="DNSChecklist-item-summary cfa">
                         <div class="item-fl numb"></div>
-                        <div class="item-fl PC-user"></div>
-                        <div class="item-fl dns-resu">
-                            <button id="dns-resu">조치완료</button>
-                            <div class="crea-date"></div>
+                        <div class="item-fl user"></div>
+                        <div class="item-fl put-resu">
+                            <button id="dns-chck-rslt">등록하기</button>
                         </div>
+                        <div class="item-fl crea-date"></div>
                     </div>
                 </div>
             </div>
