--- a/src/main/resources/static/checklist/DNSChecklist.html
+++ b/src/main/resources/static/checklist/DNSChecklist.html
@@ -33,7 +33,7 @@
             <div class="DNSChecklist">
                 <div class="DNSChecklist-item-head cfa">
                     <div class="item-fl head-numb">순번</div>
-                    <div class="item-fl head-user">직원성명</div>
+                    <div class="item-fl head-user">성명</div>
                     <div class="item-fl head-put-resu">결과등록</div>
                     <div class="item-fl head-crea-date">등록시각</div>
                 </div>
