--- a/src/main/resources/static/checklist/DNSChecklist.html
+++ b/src/main/resources/static/checklist/DNSChecklist.html
@@ -35,7 +35,7 @@
                     <div class="item-fl head-numb">순번</div>
                     <div class="item-fl head-user">성명</div>
                     <div class="item-fl head-put-resu">결과등록</div>
-                    <div class="item-fl head-crea-date">등록시각</div>
+                    <div class="item-fl head-cret-date">등록시각</div>
                 </div>
                 <div class="DNSChecklist-item" id="DNSChecklist-item-template">
                     <div class="DNSChecklist-item-summary cfa">
@@ -44,7 +44,8 @@
                         <div class="item-fl put-resu">
                             <button id="dns-chck-rslt">등록하기</button>
                         </div>
-                        <div class="item-fl crea-date"></div>
+                        <div class="item-fl cret-date"></div>
+                        <div class="item-fl dns-nchc"></div>
                     </div>
                 </div>
             </div>
