--- a/src/main/resources/static/system/join.html
+++ b/src/main/resources/static/system/join.html
@@ -30,27 +30,27 @@
                 <input type="hidden" id="RSAExponent" /><!-- 서버에서 전달한값을 셋팅한다. -->
                 <div class="id cfa">
                     <div class="textbox-name">아이디</div>
-                    <div class="input">
+                    <div class="cstm-dprt">
                         <input type="text" id="userid">
                     </div>
                 </div>
                 <div class="pw cfa">
                     <div class="textbox-name">비밀번호</div>
-                    <div class="input">
+                    <div class="cstm-dprt">
                         <input type="password" id="password">
                     </div>
                 </div>
                 <div class="pw cfa">
                     <div class="textbox-name">비밀번호 확인</div>
-                    <div class="input">
+                    <div class="cstm-dprt">
                         <input type="password" id="passwordConfirm">
                     </div>
                 </div>
             </form>
             <div class="customsDepartment cfa" id="dropdown1">
                 <div class="textbox-name">세관/부서선택</div>
-                <div class="input">
-                    <select class="dropdown">
+                <div class="cstm-dprt">
+                    <select class="drop-down">
                         <option value="" disabled selected>세관을 선택해 주세요.</option>
                         <option value="donghae">동해세관</option>
                         <option value="seoul">서울세관</option>
