--- a/src/main/resources/static/system/login.html
+++ b/src/main/resources/static/system/login.html
@@ -35,13 +35,13 @@
                 <input type="hidden" id="RSAExponent" /><!-- 서버에서 전달한값을 셋팅한다. -->
                 <div class="id cfa">
                     <div class="textbox-name">아이디</div>
-                    <div class="input">
+                    <div class="cstm-dprt">
                         <input type="text" id="userid">
                     </div>
                 </div>
                 <div class="pw cfa">
                     <div class="textbox-name">비밀번호</div>
-                    <div class="input">
+                    <div class="cstm-dprt">
                         <input type="password" id="password">
                     </div>
                 </div>
