--- a/src/main/resources/static/checklist/DNSChecklist.html
+++ b/src/main/resources/static/checklist/DNSChecklist.html
@@ -26,7 +26,7 @@
             <div class="menu-item menu-info"><a href="/">공지사항</a></div>
             <div class="menu-item menu-checklist"><a href="/checklist">체크리스트</a></div>
             <div class="menu-item menu-DNSChecklist"><a href="/DNSChecklist">DNS변경 체크리스트</a></div>
-            <div class="menu-item menu-board"><a href="/menu3">워킹그룹</a></div>
+            <div class="menu-item menu-manager"><a href="/manager">관리자</a></div>
         </div>
 
         <div id="contents">
