--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,7 @@
             <div class="menu-item menu-info" style="background-color: #FFE869;"><a href="/">공지사항</a></div>
             <div class="menu-item menu-checklist"><a href="/checklist">체크리스트</a></div>
             <div class="menu-item menu-DNSChecklist"><a href="/DNSChecklist">DNS변경 체크리스트</a></div>
-            <div class="menu-item menu-board"><a href="/menu3">워킹그룹</a></div>
+            <div class="menu-item menu-manager"><a href="/manager">관리자</a></div>
         </div>
 
         <div id="contents">
