--- a/src/main/resources/static/system/join.html
+++ b/src/main/resources/static/system/join.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unipass 4.5</title>
-    <link rel="icon" href="/unipass45.ico" type="image/x-icon">
+    <link rel="icon" href="/image/unipass45.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/index.css">
     <script defer type="text/javascript" src="/js/join.js"></script>
     <!-- RSA 자바스크립트 라이브러리 -->
@@ -52,6 +53,7 @@
                 <div class="cstm-dprt">
                     <select class="drop-down">
                         <option value="" disabled selected>세관을 선택해 주세요.</option>
+                        <option value="daejeon">대전세관</option>
                         <option value="donghae">동해세관</option>
                         <option value="seoul">서울세관</option>
                         <option value="seongnam">성남세관</option>
