--- a/src/main/resources/static/system/login.html
+++ b/src/main/resources/static/system/login.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unipass 4.5</title>
-    <link rel="icon" href="/unipass45.ico" type="image/x-icon">
+    <link rel="icon" href="/image/unipass45.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/index.css">
     <script defer src="/js/login.js"></script>
     <!-- RSA 자바스크립트 라이브러리 -->
@@ -35,13 +36,13 @@
                 <input type="hidden" id="RSAExponent" /><!-- 서버에서 전달한값을 셋팅한다. -->
                 <div class="id cfa">
                     <div class="textbox-name">아이디</div>
-                    <div class="cstm-dprt">
+                    <div class="id-pass">
                         <input type="text" id="userid">
                     </div>
                 </div>
                 <div class="pw cfa">
                     <div class="textbox-name">비밀번호</div>
-                    <div class="cstm-dprt">
+                    <div class="id-pass">
                         <input type="password" id="password">
                     </div>
                 </div>
