--- a/src/main/resources/static/checklist/DNSChecklist.html
+++ b/src/main/resources/static/checklist/DNSChecklist.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Unipass 4.5</title>
     <link rel="icon" href="/unipass45.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/css/index.css">
+    <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/DNSChecklist.css">
     <script defer src="/js/DNSChecklist.js"></script>
 </head>
