--- a/src/main/resources/static/system/manager.html
+++ b/src/main/resources/static/system/manager.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="/css/common.css">
     <link rel="stylesheet" href="/css/manager.css">
     <script defer src="/js/manager.js"></script>
+    <script defer src="/js/exceljs.min.js"></script>
 </head>
 <body>
     <div class="container"> <!-- container -->
